@@ -78,7 +78,6 @@ RCPP_SIMPLE_EXCEPTION_CLASS(not_a_closure, "not a closure")
 RCPP_SIMPLE_EXCEPTION_CLASS(no_such_function, "no such function")
 RCPP_SIMPLE_EXCEPTION_CLASS(unevaluated_promise, "promise not yet evaluated")
 
-
 RCPP_EXCEPTION_CLASS(not_compatible, message )
 RCPP_EXCEPTION_CLASS(S4_creation_error, std::string("error creating object of S4 class : ") + message )
 RCPP_EXCEPTION_CLASS(no_such_binding, std::string("no such binding : '") + message + "'" )
@@ -86,7 +85,6 @@ RCPP_EXCEPTION_CLASS(binding_not_found, std::string("binding not found: '") + me
 RCPP_EXCEPTION_CLASS(binding_is_locked, std::string("binding is locked: '") + message + "'" )
 RCPP_EXCEPTION_CLASS(no_such_namespace, std::string("no such namespace: '") + message + "'" )
 RCPP_EXCEPTION_CLASS(eval_error, message )
-
 
 #undef RCPP_EXCEPTION_CLASS
 #undef RCPP_SIMPLE_EXCEPTION_CLASS
