@@ -1,3 +1,10 @@
+2010-05-06  Romain Francois <romain@r-enthusiasts.com>
+
+	* inst/include/Rcpp/S4.h: S4 gains a "is" method to identify if an object 
+	is of a given S4 class, following Doug's advice in lme4a
+	
+	* inst/include/RcppCommon.h: new STL-like algorithm Rcpp::any 
+
 2010-05-04  Romain Francois <romain@r-enthusiasts.com>
 
 	* inst/include/Rcpp/preprocessor_generated.h: new macros to hide most of 
